[package]
name = "vectorcircles-auto-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
indicatif = "0.16.2"
google-drive3 = "3.0.0"
serde = "^1.0"
serde_json = "^1.0"
serde_yaml = "0.8.23"
futures = "0.3.21"
tokio-cron-scheduler = "0.5.0"
chrono = "0.4.19"
log = "0.4.16"
log4rs = "1.0.0"
